--- a/views/index.html
+++ b/views/index.html
@@ -8,14 +8,17 @@
   <div class="row">
     <div class="col-md-3">
       <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
-      <b>Your Name</b><br>
+      
+      <b>{{tweets[5].name}}</b><br>
+    
       100 followers
     </div>
     <div class="col-md-9">
     
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.text}}</li>
+
+        <li>{{tweet.name}}<br>{{tweet.text}}</li>
       {% endfor %}
       
     </div>
