--- a/views/index.html
+++ b/views/index.html
@@ -1,27 +1,34 @@
-{% extends "layout.html" %}
-
-{% block content %}
-  
-  <div class="page-header">
-    <h1>Welcome to Twitter.js!</h1>
-  </div>
-  <div class="row">
+{% extends "layout.html" %} {% block content %}
+<div class="page-header">
+    <h1>{{title}}</h1>
+</div>
+<div class="row">
     <div class="col-md-3">
-      <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
-      
-      <b>{{tweets[0].name}}</b><br>
-    
-      100 followers
+        <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg">
+        <br>
+        <b>{{userName}}</b>
+        <br> 100 followers
     </div>
+    {% if showForm %}
+    <form action="/tweets" method="POST">
+        <label for="name_field">Name:</label>
+        <input name="name" type="text" id="name_field" value="{{userName}}" />
+        <label for="text_field">Text:</label>
+        <input name="text" type="text" id="text_field" style="width: 350px;" />
+        <input type="submit" value="Submit" />
+    </form>
+    {% endif %}
+ 
     <div class="col-md-9">
-    
-      <!-- display tweets here -->
-      {% for tweet in tweets %}
-
-        <li>{{tweet.name}}<br>{{tweet.text}}</li>
-      {% endfor %}
-      
+        <!-- display tweets here -->
+        {% for tweet in tweets %}
+        <li><a href="/users/{{tweet.name}}">
+      {{tweet.name}}</a> - {{tweet.text}}
+            <br>
+            <a href="/tweets/{{tweet.id}}">
+      view tweet</a>
+        </li>
+        {% endfor %}
     </div>
-  </div>
-    
+</div>
 {% endblock %}
